Final VS Code configuration to prevent test file recreation
- Enhanced VS Code settings with comprehensive Intelephense exclusions
- Added file monitoring and auto-deletion prevention measures
- Updated workspace configuration with additional safeguards
- Created monitoring script for persistent file prevention
- All test/debug file patterns now properly excluded from tracking
- Image upload security fix remains active and deployed

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 !.vscode/launch.json
 !.vscode/extensions.json
 *.code-workspace
+.vscode-upload.json
+.vscode/file-monitor.log
+.vscode/prevent-file-recreation.ps1
 
 # Local History for Visual Studio Code
 .history/
