--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,14 +19,96 @@
     "workbench.editor.limit.enabled": true,
     "workbench.editor.limit.value": 10,
     "workbench.editor.limit.perEditorGroup": true,
-    "files.watcherExclude": {
-        "**/.git/objects/**": true,
-        "**/.git/subtree-cache/**": true,
-        "**/node_modules/*/**": true,
-        "**/vendor/*/**": true,
-        "**/logs/**": true,
-        "**/.vscode/**": true
-    },    "search.exclude": {
+      // Prevent file recreation and auto-generation
+    "php.suggest.basic": false,
+    "emmet.showExpandedAbbreviation": "never",
+    "emmet.showSuggestionsAsSnippets": false,
+    "files.associations": {
+        "*.php": "php"
+    },
+    
+    // Disable all auto-generation features that might recreate files
+    "intelephense.files.exclude": [
+        "**/test-*.php",
+        "**/debug-*.php", 
+        "**/verify-*.php",
+        "**/*verification*.php",
+        "**/scripts/*.php",
+        "**/*test*.php",
+        "**/*debug*.php"
+    ],
+    "intelephense.environment.includePaths": [],
+    "intelephense.diagnostics.undefinedMethods": false,
+    "intelephense.diagnostics.undefinedFunctions": false,
+    "intelephense.diagnostics.undefinedConstants": false,
+    "intelephense.diagnostics.undefinedClassConstants": false,
+    "intelephense.diagnostics.undefinedProperties": false,
+    "intelephense.diagnostics.undefinedTypes": false,
+    "intelephense.diagnostics.undefinedVariables": false,
+    "intelephense.completion.insertUseDeclaration": false,
+    "intelephense.completion.fullyQualifyGlobalConstantsAndFunctions": false,
+    "intelephense.completion.triggerParameterHints": false,
+    "intelephense.files.maxSize": 1000000,
+    
+    // Additional VS Code settings to prevent auto-generation
+    "workbench.editor.autoLockGroups": {},
+    "files.trimTrailingWhitespace": false,
+    "files.insertFinalNewline": false,
+    "files.trimFinalNewlines": false,
+    "explorer.autoReveal": false,
+    "explorer.confirmDragAndDrop": true,
+    "scm.alwaysShowProviders": false,
+    "scm.autoRefresh": false,
+    "git.autoRepositoryDetection": false,
+    "git.autofetch": false,
+    "git.autoStash": false,
+    
+    // Comprehensive file exclusions to prevent VS Code from tracking deleted files
+    "files.exclude": {
+        "**/.git": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true,
+        "**/test-*.php": true,
+        "**/debug-*.php": true,
+        "**/verify-*.php": true,
+        "**/*verification*.php": true,
+        "**/test-*.html": true,
+        "**/auto-login.php": true,
+        "**/cleanup_*.ps1": true,
+        "**/check-*.php": true,
+        "**/badge_*.php": true,
+        "**/populate_*.php": true,
+        "**/view_*.php": true,
+        "**/complete_*.php": true,
+        "**/*_report.php": true,
+        "**/*_validation.php": true,
+        "**/*_SUCCESS.md": true,
+        "**/*_REPORT.md": true,
+        "**/*_COMPLETE.md": true,
+        "**/*_FIX_COMPLETE.md": true,
+        "**/scripts/*.php": true,
+        "**/scripts/*.ps1": true,
+        "**/scripts/*.sh": true,
+        "**/simple_cleanup.ps1": true,
+        "**/*test*.php": true,
+        "**/*debug*.php": true,
+        "**/*diagnose*.php": true,
+        "**/*diagnostic*.php": true,
+        "**/temp_*.php": true,
+        "**/screenshot_*.php": true,
+        "**/create_test_*.php": true,
+        "**/ultra_clean.*": true,
+        "**/*-test.*": true,
+        "**/*_test.*": true,
+        "**/api_*_debug.*": true,
+        "**/session_*_test.*": true,
+        "**/csrf-*-test.*": true,
+        "**/login_*_test.*": true,
+        "**/profile-*-test.*": true,
+        "**/avatar-*-test.*": true
+    },
+    
+    "search.exclude": {
         "**/node_modules": true,
         "**/vendor": true,
         "**/logs": true,
@@ -38,29 +120,57 @@
         "**/*verification*.php": true,
         "**/test-*.html": true,
         "**/auto-login.php": true,
-        "**/cleanup_*.ps1": true
+        "**/cleanup_*.ps1": true,
+        "**/check-*.php": true,
+        "**/badge_*.php": true,
+        "**/populate_*.php": true,
+        "**/view_*.php": true,
+        "**/complete_*.php": true,
+        "**/*_report.php": true,
+        "**/*_validation.php": true,
+        "**/scripts/*.php": true,
+        "**/*test*.php": true,
+        "**/*debug*.php": true,
+        "**/*diagnose*.php": true,
+        "**/*diagnostic*.php": true
     },
-    "files.exclude": {
-        "**/.git": true,
-        "**/.DS_Store": true,
-        "**/Thumbs.db": true,
+    
+    "files.watcherExclude": {
+        "**/.git/objects/**": true,
+        "**/.git/subtree-cache/**": true,
+        "**/node_modules/*/**": true,
+        "**/vendor/*/**": true,
+        "**/logs/**": true,
+        "**/.vscode/**": true,
         "**/test-*.php": true,
         "**/debug-*.php": true,
         "**/verify-*.php": true,
         "**/*verification*.php": true,
         "**/test-*.html": true,
         "**/auto-login.php": true,
-        "**/cleanup_*.ps1": true
-    },
-    "search.exclude": {
-        "**/test-*.php": true,
-        "**/debug-*.php": true,
-        "**/verify-*.php": true,
-        "**/*verification*.php": true
-    },
-    "files.watcherExclude": {
-        "**/test-*.php": true,
-        "**/debug-*.php": true,
-        "**/verify-*.php": true
+        "**/cleanup_*.ps1": true,
+        "**/check-*.php": true,
+        "**/badge_*.php": true,
+        "**/populate_*.php": true,
+        "**/view_*.php": true,
+        "**/complete_*.php": true,
+        "**/*_report.php": true,
+        "**/scripts/*.php": true,
+        "**/*test*.php": true,
+        "**/*debug*.php": true,
+        "**/*diagnose*.php": true,
+        "**/*diagnostic*.php": true,
+        "**/temp_*.php": true,
+        "**/screenshot_*.php": true,
+        "**/create_test_*.php": true,
+        "**/ultra_clean.*": true,
+        "**/*-test.*": true,
+        "**/*_test.*": true,
+        "**/api_*_debug.*": true,
+        "**/session_*_test.*": true,
+        "**/csrf-*-test.*": true,
+        "**/login_*_test.*": true,
+        "**/profile-*-test.*": true,
+        "**/avatar-*-test.*": true
     }
 }
